src/test/ui/suggestions/impl-on-dyn-trait-with-implicit-static-bound.nll.stderr
error[E0521]: borrowed data escapes outside of function
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:20:9
   |
LL |     fn use_it<'a, T>(val: &'a dyn ObjectTrait<T>) -> impl OtherTrait<'a> + 'a {
   |                      --- `val` is a reference that is only valid in the function body
LL |         val.use_self::<T>()
   |         ^^^^^^^^^^^^^^^^^^^ `val` escapes the function body here

error[E0521]: borrowed data escapes outside of function
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:69:9
   |
LL |     fn use_it<'a>(val: &'a dyn ObjectTrait) -> impl OtherTrait<'a> + 'a {
   |                   --- `val` is a reference that is only valid in the function body
LL |         val.use_self()
   |         ^^^^^^^^^^^^^^ `val` escapes the function body here

error[E0521]: borrowed data escapes outside of function
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:88:9
   |
LL |     fn use_it<'a>(val: &'a dyn ObjectTrait) -> impl OtherTrait<'a> {
   |                   --- `val` is a reference that is only valid in the function body
LL |         val.use_self()
   |         ^^^^^^^^^^^^^^ `val` escapes the function body here

error[E0521]: borrowed data escapes outside of function
  --> $DIR/impl-on-dyn-trait-with-implicit-static-bound.rs:108:9
   |
LL |     fn use_it<'a>(val: &'a dyn ObjectTrait) -> impl OtherTrait<'a> + 'a {
   |                   --- `val` is a reference that is only valid in the function body
LL |         MyTrait::use_self(val)
   |         ^^^^^^^^^^^^^^^^^^^^^^ `val` escapes the function body here

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0521`.
